--- a/.config
+++ b/.config
@@ -4031,7 +4031,7 @@ CONFIG_PACKAGE_luci-app-syncdial=y
 # CONFIG_PACKAGE_luci-app-udpxy is not set
 # CONFIG_PACKAGE_luci-app-uhttpd is not set
 CONFIG_PACKAGE_luci-app-unblockmusic=y
-# CONFIG_UnblockNeteaseMusic_Go is not set
+CONFIG_UnblockNeteaseMusic_Go=y
 # CONFIG_UnblockNeteaseMusic_NodeJS is not set
 # CONFIG_PACKAGE_luci-app-unbound is not set
 CONFIG_PACKAGE_luci-app-upnp=y
@@ -4659,7 +4659,7 @@ CONFIG_PACKAGE_dns2socks=y
 # NeteaseMusic
 #
 # CONFIG_PACKAGE_UnblockNeteaseMusic is not set
-# CONFIG_PACKAGE_UnblockNeteaseMusicGo is not set
+CONFIG_PACKAGE_UnblockNeteaseMusicGo=y
 
 #
 # OLSR.org network framework
