--- a/.github/workflows/update-checker.yml
+++ b/.github/workflows/update-checker.yml
@@ -13,7 +13,7 @@ name: Update Checker
 
 env:
   REPO_URL: https://github.com/istoreos/istoreos
-  REPO_BRANCH: master
+  REPO_BRANCH: istoreos-22.03
 
 on:
   workflow_dispatch:
